// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton Component should match snapshot with 'cog' icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.33)",
      "borderRadius": 22.5,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "width": 45,
    }
  }
  testID="IconButton::cog"
>
  <Text>
    cog
  </Text>
</View>
`;

exports[`IconButton Component should match snapshot with 'home' icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.33)",
      "borderRadius": 22.5,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "width": 45,
    }
  }
  testID="IconButton::home"
>
  <Text>
    home
  </Text>
</View>
`;
